# gazelle-bug-example

./: BUILD.bazel  Gopkg.toml  main.go
proto/: BUILD.bazel  gazelle.proto
